fix text-align for text in footer description

--- a/src/app/blocks/Ecosystem/Ecosystem/ecosystem.module.scss
+++ b/src/app/blocks/Ecosystem/Ecosystem/ecosystem.module.scss
@@ -420,7 +420,7 @@
     color: $oceanBlue;
     line-height: 28px;
     max-width: 680px;
-    text-align: center;
+    text-align: start;
     display: flex;
     align-items: center;
     height: 100%;
@@ -1009,7 +1009,7 @@
 	 }
 	 
 	 &__footer-description {
-		 text-align: center;
+		 text-align: start;
 		 line-height: 22px;
 		 max-width: 100%;
 	 }
